# Abstract_VM

./: .gitignore  CMakeLists.txt  IOperand.h  Lexem.cpp  Lexem.h  Lexer.cpp  Lexer.h  Makefile  Operand.cpp  Operand.h  OperandFactory.cpp  OperandFactory.h  Parser.cpp  Parser.h  Token.cpp  Token.h  VirtualMachine.cpp  VirtualMachine.h  avm  main.cpp
incl/: Error.h  Lexer.h  Operand.h  OperandFactory.h  Parser.h  Token.h  VirtualMachine.h
src/: Error.cpp  Lexer.cpp  OperandFactory.cpp  Parser.cpp  Token.cpp  VirtualMachine.cpp  main.cpp
